# cato

./: .gitmodules  README.md
scripts/baseline/: baseline_inf.py  baseline_reg.py  baseline_tr.py
scripts/helper/: consts.py  feature_selection.py  pareto.py  prior_injection.py  utils.py
scripts/measure/: ground_truth.py  measure_compute.py  measure_inference.py  measure_latency.py  measure_regression.py  measure_throughput.py  retina.py
scripts/model_train_test/: List_Of_Devices.txt  app_labels.toml  dataset_preprocess_app.py  dataset_preprocess_iot.py  dataset_preprocess_startup.py  decision_tree.py  dnn.py  random_forest.py
scripts/opt/: cato_optimize.py
scripts/pareto_baseline/: all_search.py  random_search.py  simulated_annealing.py
scripts/train_rust_dt/: Cargo.toml
scripts/train_rust_dt/src/: main.rs
scripts/train_rust_rf/: Cargo.toml
scripts/train_rust_rf/src/: main.rs
