[package]
name = "train_rust_rf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smartcore = { git = "https://github.com/smartcorelib/smartcore", features = ["datasets"] }
anyhow = "1.0.70"
csv = "1.2.1"
clap = {version = "4.2.4", features = ["derive"] }
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"